--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 
 [dependencies]
 rodio = "0.14.0"
+crossterm = "0.20"
+tui = { version = "0.16", default-features = false, features = ['crossterm'] }
